2000-04-03  Mo DeJong  <mdejong@redhat.com>

	* diffs.txt: Added note about Interp.recordAndEval
	* new_features.txt: Added note about the addition
	of the history command.
	* docs/cFunctions.html: Fixed Interp.recordAndEval
	doc and reformatted to a single list.
	* docs/TclJavaLib/Eval.htm: Fixed Interp.recordAndEval
	documentation.
	* src/jacl/tcl/lang/ConsoleEvent.java: Fixed up
	Interp.recordAndEval method invocation.
	* src/jacl/tcl/lang/Interp.java: Changed signature
	for recordAndEval method.
	* src/tclblend/tcl/lang/Interp.java: Added empty stub
	for recordAndEval method.
	* tests/tcl/history.test: Added regression tests for
	history command.

2000-04-01  Mo DeJong  <mdejong@redhat.com>

	* src/tcljava/tcl/lang/ReflectObject.java: improved some
	error and debug messages.

2000-04-01  Mo DeJong  <mdejong@redhat.com>

	* unix/Makefile.in: added "make check" rule as an alias
	to "make test" to conform to the GNU coding standards.

2000-04-01  Mo DeJong  <mdejong@redhat.com>

	* unix/Makefile.in:
	* win/makefile.vc: Fixed bug that caused the pyramidpkg
	to get compiled and shipped with tclblend. This fix was
	also back ported to the old 1.2 version.

2000-04-01  Mo DeJong  <mdejong@redhat.com>

	* unix/kaffe_tests: removed useless file.

2000-04-01  Mo DeJong  <mdejong@redhat.com>

	* unix/Makefile.in: fixed up "make dists" rule.

2000-03-30  Mo DeJong  <mdejong@redhat.com>

	* changes.txt: updated contents as a result
	of back porting fixes to the 1.2 branch.

2000-03-29  Mo DeJong  <mdejong@redhat.com>

	* unix/configure.in: removed IRIX hack that was added
	on 2000-02-23 but in fact did not work.

2000-03-20 Mo DeJong  <mdejong@redhat.com>

	* src/tests/tcljava/tests/javabind/ActionEvent.java:
	* src/tests/tcljava/tests/javabind/ActionListener.java:
	* src/tests/tcljava/tests/javabind/Bind.java:
	* tests/tcljava/JavaBindCmd.test:
	* unix/Makefile.in
	Added new multi-threaded test case for the java::bind command.

2000-03-17 Mo DeJong  <mdejong@redhat.com>
